--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-    <h1>Base</h1>
+<body class='bg-secondary'>
+    <div class="container vh-100 justify-content-center align-items-center d-flex">
+        <div class="w-50 bg-light" style="border-radius: 15px">
+            {% block content %}{% endblock %}                    
+        </div>
+    </div>
+    
 </body>
 </html> 
