--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -5,14 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
+    {% block css %}{% endblock %}
+    {% block script %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class='bg-secondary'>
-    <div class="container vh-100 justify-content-center align-items-center d-flex">
-        <div class="w-50 bg-light" style="border-radius: 15px">
+    <div class="row align-items-center vh-100">
+        <div class="col-xl"></div>
+        <div class="col-xl bg-light rounded">
             {% block content %}{% endblock %}                    
-        </div>
+        </div>  
+        <div class="col-xl"></div>
     </div>
-    
 </body>
 </html> 
+
